...
        android:layout_marginRight="8dp">

        <include
            layout="@layout/circular_gauge_with_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/cg_download"
            />
        <include
            layout="@layout/circular_gauge_with_text"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:id="@+id/cg_upload"
            />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/net_cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="5dp"
        android:layout_marginTop="5dp"
...

            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/ping_cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="5dp"
...
                                android:text="Suggestions" />
                                -->
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/status_cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="5dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/bw_gauge_fl"
        app:layout_constraintBottom_toTopOf="@+id/bottom_dialog_inc"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/status_tv"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-condensed"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bottomDialog_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/wifi_doc_launcher"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/bottomDialog_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.8"
                    android:fontFamily="sans-serif-condensed-thin"
                    android:text="Test Status"
                    android:textColor="@android:color/holo_blue_dark"
...
                android:layout_height="0dp"
                android:layout_weight="0.95"
                android:layout_gravity="bottom"
                android:layout_marginTop="3dp">

                <TextView
                    android:id="@+id/bottomDialog_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:fontFamily="sans-serif-condensed"
                    android:maxLines="15"
                    android:minLines="15"
...
                android:layout_marginTop="5dp"
                android:gravity="bottom|end"
                android:layout_gravity="bottom|end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bottomDialog_cancel"
                    style="@style/MyButton.Flat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@android:string/cancel"
                    android:textSize="14sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/bottomDialog_details"
                    style="@style/MyButton.Flat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DETAILS"
                    android:textSize="14sp"
                    android:textColor="@android:color/holo_blue_dark"
...
                android:layout_gravity="start"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                style="@style/MyLargeImageButton.Base"
                android:focusable="true"
                android:clickable="true"
                android:id="@+id/contact_expert_fl"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/bottom_expert"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
...
                            android:padding="2dp"
                            android:layout_gravity="center_horizontal|top"
                            android:src="@drawable/ic_share_64dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:text="Share"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"
                            android:textSize="10sp"
                            android:layout_gravity="bottom|center_horizontal"
                            android:gravity="center_horizontal"
                            android:layout_height="wrap_content" />
...
                android:id="@+id/bottom_button_grid_inc"
                />
                -->
        </LinearLayout>

        <FrameLayout
            android:id="@+id/bottom_run_tests_fl"
            style="@style/MyLargeImageButton.Base"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_margin="2dp"
            android:background="@drawable/orange_button_selector"
...
            android:focusable="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:text="RUN TESTS"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </FrameLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
