...
        </LinearLayout>
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/main_fab_button"
        android:src="@mipmap/wifi_meter"
        app:backgroundTint="@color/orangeMediumLight1"
        app:rippleColor="@color/orangeLighter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@android:string/cancel"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/bottomDialog_ok"
                    style="@style/MyButton.Flat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MORE"
                    android:textColor="@android:color/holo_blue_dark"
                    android:visibility="invisible" />
...
