...
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/darkGray"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/bottom_next_fl"
        style="@style/MyLargeImageButton.Base"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:clickable="true"
...
