...

    <TextView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="0.0"
        android:textSize="30sp"
        android:id="@+id/gauge_tv"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignTop="@id/bw_gauge"
        android:layout_alignEnd="@id/bw_gauge"
        android:layout_alignRight="@id/bw_gauge"
        android:layout_alignStart="@id/bw_gauge"
        android:layout_alignLeft="@id/bw_gauge"
...
